[package]
name = "radar_reader"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.8.4"
bincode = "1.3.3"
serde = { version = "1.0.202", features = ["derive"] }
serde-big-array = "0.5.1"
ros_pointcloud2 = { version = "0.5.0-rc.1", features = ["r2r_msg"] }
